Fix paragraph spacing

--- a/_sass/_03-grandes-reussites.scss
+++ b/_sass/_03-grandes-reussites.scss
@@ -31,7 +31,7 @@
     @extend .col-sm-8;
     @extend .col-md-6;
     clear: both;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   ol {
